# VirtualGhost

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.github/workflows/: ci.yml
assets/: README.md
guest/ghostly-agent/: Cargo.toml
guest/ghostly-agent/src/: main.rs  server.rs
scripts/: package-qemu.ps1  package-qemu.sh
src/: cli.rs  error.rs  main.rs
src/config/: defaults.rs  mod.rs  settings.rs
src/network/: mod.rs  tunnel.rs  vsock.rs
src/ssh/: client.rs  keys.rs  mod.rs  session.rs
src/terminal/: app.rs  input.rs  mod.rs  ui.rs  vterm.rs
src/vfio/: mod.rs  setup.rs
src/vm/: api.rs  assets.rs  config.rs  mod.rs  models.rs  process.rs
