[package]
name = "virtualghost"
version = "0.1.0"
edition = "2021"
description = "Ghostty launcher in isolated QEMU VMs with GPU passthrough"
license = "MIT"

[[bin]]
name = "virtualghost"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "6"

# QMP protocol (JSON over socket)
serde_json = "1"

# SSH
russh = "0.48"
russh-keys = "0.48"
ssh-key = "0.6"
rand = "0.8"
async-trait = "0.1"

# Embedded assets
zstd = "0.13"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
tempfile = "3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }
walkdir = "2"

[build-dependencies]
zstd = "0.13"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
